# FlowCore

./: .gitignore  compile_commands.json  readme.md
src/minco_curve/: CMakeLists.txt  package.xml
src/minco_curve/include/: stc_gen.hpp  traj_optmizer.hpp
src/minco_curve/include/utils/: minco.hpp
src/minco_curve/launch/: simple_move_base.launch
src/minco_curve/maps/: map.yaml  slow.pgm
src/minco_curve/src/: test_node.cpp
